# ship_environment

./: .gitignore  dqn_model.pth  main.py  notes.txt  requirements.txt  test_model.py  train_dqn.py
shipenv/: __init__.py  pyproject.toml  ship_env.py
